加入相机内容

--- a/OmicronforAutoSteel.ViewModel/OmicronforAutoSteel.ViewModel.csproj
+++ b/OmicronforAutoSteel.ViewModel/OmicronforAutoSteel.ViewModel.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="halcondotnet">
+      <HintPath>C:\Program Files\MVTec\HALCON-10.0\bin\dotnet35\halcondotnet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -52,6 +55,10 @@
     <ProjectReference Include="..\OmicronforAutoSteel.Model\OmicronforAutoSteel.Model.csproj">
       <Project>{090f08a0-27cc-4f32-be4c-bc57286f94e0}</Project>
       <Name>OmicronforAutoSteel.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ViewROI\ViewROI.csproj">
+      <Project>{c4f5c5de-7ea8-47fe-8218-48138f48965f}</Project>
+      <Name>ViewROI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
