--- a/OmicronforAutoSteel.Model/OmicronforAutoSteel.Model.csproj
+++ b/OmicronforAutoSteel.Model/OmicronforAutoSteel.Model.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="DeltaAS300.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
