添加AOI部分代码

--- a/OmicronforAutoSteel.Model/OmicronforAutoSteel.Model.csproj
+++ b/OmicronforAutoSteel.Model/OmicronforAutoSteel.Model.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AOICCD.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="DeltaAS300.cs" />
     <Compile Include="Robot.cs" />
