--- a/OmicronforAutoSteel/OmicronforAutoSteel.csproj
+++ b/OmicronforAutoSteel/OmicronforAutoSteel.csproj
@@ -174,6 +174,10 @@
       <Project>{4af25010-f781-4a08-886f-7b40fe1c772f}</Project>
       <Name>BingLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\OmicronforAutoSteel.Model\OmicronforAutoSteel.Model.csproj">
+      <Project>{090f08a0-27cc-4f32-be4c-bc57286f94e0}</Project>
+      <Name>OmicronforAutoSteel.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OmicronforAutoSteel.ViewModel\OmicronforAutoSteel.ViewModel.csproj">
       <Project>{d22b4920-0038-4a16-a97d-f0d2290ea854}</Project>
       <Name>OmicronforAutoSteel.ViewModel</Name>
